# lk-hansard-topic-modeling

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
artifacts/: artifact_manifest.json
artifacts/evaluation/: evaluation_summary.md  table_iii_metrics.csv  topic_quality_metrics.csv
artifacts/final_v14/: ablation_results.csv  llm_macro_topic_prompt.txt  macro_topic_assignments.csv  macro_topic_keywords.json  macro_topic_keywords_100.json  table_5_1_model_comparison.csv  umap2.npy  umap5.npy  v11_cluster_assignments.csv  v11_metrics.csv  v11_top_keywords.json
configs/: evaluation_config.example.json  modeling_config.example.json  stopwords.json
dashboard/: dashboard.html
data/evaluation/: annotation_guidelines.md  gold_standard_eval_sample_source.csv  ground_truth_300.csv  ground_truth_evaluable_273.csv  ground_truth_exclusions.csv  label_taxonomy.json  topics_reasoning_source.json
data/extraction_audit/: README.md  extraction_audit_results.csv  gemini_prompt.md
docs/: architecture.md  data-contracts.md  paper-summary.md  reproduce.md
docs/extraction_audit/: extraction_audit.md  extraction_audit_manual_benchmark_template.csv
docs/macro_topic_aggregation/: README.md  macro_topic_aggregation_audit.ipynb  macro_topic_mapping.csv  macro_topic_mapping_template.csv  macro_topics_summary.csv  merge_gap_candidates.csv  parameters.yaml  retained_micro_topics.csv
scripts/: audit_macro_topic_aggregation.py  evaluate_extraction_audit.py
src/evaluation/: classification_metrics.py  extraction_audit.py  run_evaluation.py  (+1 more)
(+771 files in other folders)
