[project]
name = "lk-hansard-topic-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "datasets>=5.0.0",
    "hdbscan>=0.8.44",
    "huggingface-hub>=1.20.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "thefuzz>=0.22.1",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "umap-learn>=0.5.12",
    "wordcloud>=1.9.6",
]
